Neighborhoods: fix layout bug with AddThis buttons

--- a/public/stylesheets/sass/neighborhoods.scss
+++ b/public/stylesheets/sass/neighborhoods.scss
@@ -34,6 +34,7 @@ $narrow-font: 'FontSiteSansLightCond', 'Arial Narrow', 'Arial', sans-serif;
   position: absolute;
   right: 0;
   top: 12px;
+  width: 150px;
 }
 
 .nh-banner-img {
